--- a/index.html
+++ b/index.html
@@ -17,26 +17,23 @@
         <img src="./icons/icon_menu.svg" alt="menu" class="menu">
         <!-- aca lo que estamos haciendo es dividir lo que queremos que nos aparezca a la izquierda o a la derecha del codigo -->
         <div class="navbar-left">
-            <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+            <img src="./logos/logo.png" alt="logo" class="logo">
             
             <ul>
                 <li>
-                    <a href="/">All</a>
+                    <a href="/">Todo</a>
                 </li>
                 <li>
-                    <a href="/">Clothe</a>
+                    <a href="/">Liquidos</a>
                 </li>
                 <li>
-                    <a href="/">Electronics</a>
+                    <a href="/">Utencilios</a>
                 </li>
                 <li>
-                    <a href="/">Furnitures</a>
+                    <a href="/">Desechables</a>
                 </li>
                 <li>
-                    <a href="/">Toys</a>
-                </li>
-                <li>
-                    <a href="/">Others</a>
+                    <a href="/">Bolsas</a>
                 </li>
             </ul>
         </div>
@@ -71,22 +68,19 @@
                         <a href="/" class="title">CATEGORIES</a>
                     </li>
                     <li>
-                        <a href="/">ALL</a>
+                        <a href="/">Todo</a>
                     </li>
                     <li>
-                        <a href="/">Clothes</a>
+                        <a href="/">Liquidos</a>
                     </li>
                     <li>
-                        <a href="/">Electronics</a>
+                        <a href="/">Utencilios</a>
                     </li>
                     <li>
-                        <a href="/">Furnitures</a>
+                        <a href="/">Desechables</a>
                     </li>
                     <li>
-                        <a href="/">Toys</a>
-                    </li>
-                    <li>
-                        <a href="/">Others</a>
+                        <a href="/">Bolsas</a>
                     </li>
                 </ul>
         
