--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <li>
                         <a href="/">Todo</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="/">Liquidos</a>
                     </li>
                     <li>
@@ -81,7 +81,7 @@
                     </li>
                     <li>
                         <a href="/">Bolsas</a>
-                    </li>
+                    </li> -->
                 </ul>
         
                 <ul>
@@ -135,27 +135,29 @@
         </div>
     </aside>
 
-    <aside class="extended-product-detail inactive">
-        <div class="product-detail-close">
-            <img src="./icons/icon_close.png" alt="close">
-        </div>
-        <img src="https://images.pexels.com/photos/590791/pexels-photo-590791.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="crazy bike">
-        <div class="extended-product-info">
-            <p>$35,00</p>
-            <p>bike</p>
-            <p>Width its practical psotion this bike also furdollos a decorative funtion, add your hall or workspace</p>
-            <button class="primary-button">
-                <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
-                add to cart
-            </button>
-        </div>
-    </aside>
+    <div class="contendAside">
+        <!-- 
+        <aside class="extended-product-detail inactive">
+            <div class="product-detail-close">
+                <img src="./icons/icon_close.png" alt="close">
+            </div>
+            <img src="https://images.pexels.com/photos/590791/pexels-photo-590791.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="crazy bike">
+            <div class="extended-product-info">
+                <p>$35,00</p>
+                <p>bike</p>
+                <p>Width its practical psotion this bike also furdollos a decorative funtion, add your hall or workspace</p>
+                <button class="primary-button">
+                    <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
+                </button>
+            </div>
+        </aside>
+        -->
+    </div>
     
     <section class="main-container">
     <!-- esta seccion es creada para poder centrar los div -->
         <div class="cards-container">
         <!-- este contenedor va a organizar el tema de la grid de nuestros elementos -->
-
 
             <!--
             <div class="product-card">
