se agregan parte de los productos que se van a vender, pero ahora tenemos una dificultad porque la seccion de productDetail se queda arriba y no va a ser tan comodo para el usuario, buscar solución

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="navbar-right">
             <ul>
-                <li class="navbar-email">correo@example.com</li>
+                <li class="navbar-email"> <!-- correo@example.com --></li>
                 <li class="navbar-shopping-cart">
                     <img src="./icons/icon_shopping_cart.svg" alt="icon shopping car">
                     <div><span class="numeroProductosAgregados">0</span></div>
