Se soluciona el problema del aside cambiado a position fixed en lugar de absolute, tambien agregamos la feature de overflow en el carrito de compras.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <aside class="product-detail inactive">
         <div class="title-container">
             <img src="./icons/flechita.svg" alt="flechita">
-            <p class="title">My order</p>
+            <p class="title">Mi orden</p>
         </div>
         <div class="my-order-content">
             
@@ -130,7 +130,7 @@
             </div>
 
             <button class="primary-button">
-                Checkout
+                Comprar
             </button>
         </div>
     </aside>
