--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
         
                 <ul>
                     <li>
-                        <a href="/">My orders</a>
+                        <a href="/">Mi orden</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="/">My account</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
     
-            <ul>
+            <!-- <ul>
                 <li>
                     <a href="/" class="email">correo@example.com</a>
                 </li>
                 <li>
                     <a href="/" class="sign-out">Sign out</a>
                 </li>
-            </ul>
+            </ul> -->
         </div>
     </nav>
 
