Se cambia el logo de la x para que sea mas visible y se le da accion a la flechita que aparece en la seccion del aside para que se salga cuando lo opturen

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <aside class="product-detail inactive">
         <div class="title-container">
-            <img src="./icons/flechita.svg" alt="flechita">
+            <img class="salir-Del-Carrito" src="./icons/flechita.svg" alt="flechita">
             <p class="title">Mi orden</p>
         </div>
         <div class="my-order-content">
