--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <div class="navbar-right">
             <ul>
                 <li class="navbar-email"> <!-- correo@example.com --></li>
+                <li class="imgWhatsapp"><a href="https://wa.me/573202582982?text=Holaa!,%20como%20estás?,%20visite%20tu%20página%20y%20me%20interesan%20los%20siguientes%20productos:%20" target="_blank"><img src="./icons/icon-whatsapp.png" alt="Contacto por whatsapp"></a></li>
+                <!-- El atributo target="_blank" lo que hace es que depliega el enlace en una pestaña nueva de esa forma el cliente solo tiene que cambiar de pestaña y no devolverse en caso de que quiera ver los productos de nuevo -->
                 <li class="navbar-shopping-cart">
                     <img src="./icons/icon_shopping_cart.svg" alt="icon shopping car">
                     <div><span class="numeroProductosAgregados">0</span></div>
