Se integra pagina de portafolio en la sección de nav de celestia variedades en el apartado de quienes somos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@300&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">  
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
-    <title>Celestia Variedades tienda online</title>
+    <title>Celestia Variedades</title>
 </head>
 <body>
     <nav>
@@ -22,12 +22,12 @@
             
             <ul>
                 <li>
-                    <a href="/">Todo</a>
-                </li>
-                <!-- <li>
-                    <a href="/">Liquidos</a>
+                    <a href="/index.html">Todo</a>
                 </li>
                 <li>
+                    <a href="/portafolio.html">¿Quienes somos?</a>
+                </li>
+                <!-- <li>
                     <a href="/">Utencilios</a>
                 </li>
                 <li>
@@ -71,7 +71,7 @@
                         <a href="/" class="title">CATEGORIES</a>
                     </li>
                     <li>
-                        <a href="/">Todo</a>
+                        <a href="./index.html">Todo</a>
                     </li>
                     <!-- <li>
                         <a href="/">Liquidos</a>
