--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </li>
             </ul>
         </div>
-        <div class="desktop-menu inactive">
+        <!-- <div class="desktop-menu inactive">
             <ul>
                 <li>
                     <a href="/" class="title">My orders</a>
@@ -63,7 +63,7 @@
                     <a href="/">Sign out</a>
                 </li>
             </ul>
-        </div>
+        </div> -->
         <div class="mobile-menu inactive">
             <div>
                 <ul>
@@ -73,10 +73,10 @@
                     <li>
                         <a href="./index.html">Todo</a>
                     </li>
-                    <!-- <li>
-                        <a href="/">Liquidos</a>
-                    </li>
                     <li>
+                        <a href="/portafolio.html">¿Quienes somos?</a>
+                    </li>
+                    <!-- <li>
                         <a href="/">Utencilios</a>
                     </li>
                     <li>
